--- a/assembler_gazebo/config/bhand_controller.yaml
+++ b/assembler_gazebo/config/bhand_controller.yaml
@@ -1,4 +1,4 @@
-gripper_controller:
+gripper_gazebo_controller:
   type: position_controllers/JointTrajectoryController
   joints:
       - bh_j11_joint
