--- a/assembler_gazebo/config/arm_controller_ur5.yaml
+++ b/assembler_gazebo/config/arm_controller_ur5.yaml
@@ -1,5 +1,5 @@
-arm_controller:
-  type: velocity_controllers/JointTrajectoryController
+arm_gazebo_controller:
+  type: position_controllers/JointTrajectoryController
   joints:
      - shoulder_pan_joint
      - shoulder_lift_joint
@@ -16,14 +16,6 @@ arm_controller:
       wrist_1_joint: {trajectory: 0.1, goal: 0.1}
       wrist_2_joint: {trajectory: 0.1, goal: 0.1}
       wrist_3_joint: {trajectory: 0.1, goal: 0.1}
-
-  gains:
-      shoulder_pan_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
-      shoulder_lift_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
-      elbow_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
-      wrist_1_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
-      wrist_2_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
-      wrist_3_joint: {p: 100,  d: 1, i: 1, i_clamp: 1}
   stop_trajectory_duration: 0.5
-  state_publish_rate:  25
+  state_publish_rate:  125
   action_monitor_rate: 10
